--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 
 <header>
     <div style="width: 30px; height: 30px; background-color: #888; border-radius: 50%;"></div>
-    <input type="text" class="search-bar" placeholder="INI PERCOBAAN KEDUA" />
+    <input type="text" class="search-bar" placeholder="INI PERCOBAAN KETIGA COYYY" />
 </header>
 
 <div class="grid-container" id="gridContainer">
